Fix recipe card overflow on mobile

--- a/client/src/pages/recipes/Recipes.scss
+++ b/client/src/pages/recipes/Recipes.scss
@@ -17,7 +17,7 @@
     grid-template-columns: 1fr 1fr;
   }
   @media only screen and (max-width: 600px) {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
   }
 }
 
