--- a/client/src/pages/recipes/components/RecipeCard.scss
+++ b/client/src/pages/recipes/components/RecipeCard.scss
@@ -47,11 +47,13 @@
   }
 
   footer {
+    display: flex;
+    flex-wrap: wrap;
     border-top: 1px solid #f2f2f2;
     padding: 1rem 0;
     margin: 0 1rem;
     span {
-      margin: 0 .5rem;
+      margin: .25rem .5rem;
       font-family: 'Merriweather', serif;
       font-size: 12px;
       font-weight: 900;
